# Rustjob_scraping

./: Cargo.toml  README.md  debug_page.html  rustjobs.csv  rustjobs_analysis.csv
src/: main.rs  scraper.rs
