[package]
name = "scaper_rustjos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
csv = "1.3.1"
futures = "0.3.31"
headless_chrome = "1.0.17"
regex = "1.11.2"
reqwest = {version = "0.12.23", features = ["json", "cookies"]}
scraper = "0.24.0"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = {version ="1.47.1", features = ["full"]}
